--- a/playbook/playbook_instal_pg.yaml
+++ b/playbook/playbook_instal_pg.yaml
@@ -12,5 +12,5 @@
     - name: Download pgpro-repo-add.sh
       ansible.builtin.get_url:
         url: https://repo.postgrespro.ru/1c/1c-16/keys/pgpro-repo-add.sh
-        dest: /home/"{{ $USER }}"
-        mode: '751'    
+        dest: /home/"{{ username.stdout }}"
+        mode: '0751'    
