--- a/playbook/playbook_instal_pg.yaml
+++ b/playbook/playbook_instal_pg.yaml
@@ -12,7 +12,7 @@
     - name: Download pgpro-repo-add.sh
       get_url:
         url: https://repo.postgrespro.ru/1c/1c-16/keys/pgpro-repo-add.sh
-        dest: /home/"{{ username.stdout }}"
+        dest: /home/"{{ username.stdout }}"/
         mode: '0751'
 
     - name: Run script add repository
