--- a/playbook/playbook_instal_pg.yaml
+++ b/playbook/playbook_instal_pg.yaml
@@ -16,9 +16,8 @@
         mode: '0751'
 
     - name: Run script add repository
-      script: /home/diadmin/pgpro-repo-add.sh
-      args:
-        executable: /bin/bash
+      shell: /home/diadmin/pgpro-repo-add.sh
+      
 
     - name: Update cache
       apt:
