--- a/playbook/playbook_instal_pg.yaml
+++ b/playbook/playbook_instal_pg.yaml
@@ -4,6 +4,15 @@
   become: true
 
   tasks:
+    - name: Check if file exists using stat module
+      stat:
+        path: /etc/apt/sources.list.d/postgresql-1c-16.list
+      register: file_status
+
+    - name: Print file status
+      debug:
+        var: file_status.stat.exists
+
     - name: Register an example variable
       become: false
       shell: echo "$USER"
