--- a/playbook/playbook_instal_pg.yaml
+++ b/playbook/playbook_instal_pg.yaml
@@ -36,4 +36,4 @@
           name: postgrespro-1c-16
           state: present
 
-    when: file_status.stat.exists != true
+    when: {{file_status.stat.exists}} == false
