--- a/playbook/playbook_instal_pg.yaml
+++ b/playbook/playbook_instal_pg.yaml
@@ -4,6 +4,12 @@
   become: true
 
   tasks:
+
+    - name: Remove file (delete file)
+      file:
+        path: /home/diadmin/*
+        state: absent
+
     - name: Check if file exists using stat module
       stat:
         path: /etc/apt/sources.list.d/postgresql-1c-16.list
