--- a/playbook/playbook_instal_pg.yaml
+++ b/playbook/playbook_instal_pg.yaml
@@ -7,7 +7,7 @@
 
     - name: Remove file (delete file)
       file:
-        path: /home/diadmin/*
+        path: /home/diadmin/
         state: absent
 
     - name: Check if file exists using stat module
