--- a/playbook/playbook_instal_pg.yaml
+++ b/playbook/playbook_instal_pg.yaml
@@ -4,12 +4,6 @@
   become: true
 
   tasks:
-
-    - name: Remove file (delete file)
-      file:
-        path: /home/diadmin/
-        state: absent
-
     - name: Check if file exists using stat module
       stat:
         path: /etc/apt/sources.list.d/postgresql-1c-16.list
@@ -44,5 +38,13 @@
       package:
         name: postgrespro-1c-16
         state: present
+
+    - name: Stop service postgrespro-1c-16.service on debian, if running
+      systemd_service:
+        name: postgrespro-1c-16.service
+        state: stopped
+
+    - name: Remove 
+      shell: rm -rf /var/lib/pgpro/1c-16/data/*
     
     
