--- a/playbook/playbook_init_server.yaml
+++ b/playbook/playbook_init_server.yaml
@@ -19,6 +19,5 @@
 
 #Asia/Tokyo
     - name: Set timezone to Europe/Moscow
-      become: true
-      timezone:
+      ansible.posix.timezone:
         name: Europe/Moscow
