--- a/playbook/playbook_init_server.yaml
+++ b/playbook/playbook_init_server.yaml
@@ -17,7 +17,10 @@
         name: "{{ hostname }}"
         use: systemd
 
+    - name: Set timezone using shell
+      shell: timedatectl set-timezone Europe/Moscow
+
 #Asia/Tokyo
-    - name: Set timezone to Europe/Moscow
-      ansible.posix.timezone:
-        name: Europe/Moscow
+    # - name: Set timezone to Europe/Moscow
+    #   ansible.posix.timezone:
+    #     name: Europe/Moscow
