--- a/playbook/playbook_init_server.yaml
+++ b/playbook/playbook_init_server.yaml
@@ -20,6 +20,12 @@
     - name: Set timezone using shell
       shell: timedatectl set-timezone Europe/Moscow
 
+    - name: Install packages
+      package:
+        name: {{ item }}
+        state: present
+      loop: {{ packages }}
+
 #Asia/Tokyo
     # - name: Set timezone to Europe/Moscow
     #   ansible.posix.timezone:
