--- a/playbook/playbook_instal_pg.yaml
+++ b/playbook/playbook_instal_pg.yaml
@@ -56,7 +56,7 @@
       shell: sudo -u postgres psql -c "ALTER USER postgres WITH PASSWORD '123Qwe';"
 
 
-    - name: Create a new database with name "acme"
-      community.postgresql.postgresql_db:
-        name: acme
-        comment: My test DB
+    # - name: Create a new database with name "acme"
+    #   community.postgresql.postgresql_db:
+    #     name: acme
+    #     comment: My test DB
