--- a/playbook/playbook_instal_pg.yaml
+++ b/playbook/playbook_instal_pg.yaml
@@ -53,7 +53,7 @@
         state: started
 
     - name: Select passwd postgres 
-      shell: sudo -u postgres psql -c "ALTER USER postgres WITH PASSWORD '123Qwe';"
+      shell: sudo -u postgres psql -c "ALTER USER postgres WITH PASSWORD '123Qwee';"
 
 
     # - name: Create a new database with name "acme"
