--- a/playbook/playbook_install_1c.yml
+++ b/playbook/playbook_install_1c.yml
@@ -10,6 +10,10 @@
         export ONEC_USERNAME={{ login_1c }}
         export ONEC_PASSWORD={{ password_1c }}
 
+    - name: Print file status
+      debug:
+        var: login_1c
+
     - name: Mount ephemeral SMB volume
       ansible.posix.mount:
         src: //10.10.2.10/repo
