--- a/playbook/playbook_install_1c.yml
+++ b/playbook/playbook_install_1c.yml
@@ -7,8 +7,8 @@
 
     - name: Export variable to the system
       shell: |
-        export ONEC_USERNAME={{ login_1c }}
-        export ONEC_PASSWORD={{ password_1c }}
+        export ONEC_USERNAME="{{ login_1c }}"
+        export ONEC_PASSWORD="{{ password_1c }}"
 
     - name: Print file status
       debug:
