--- a/playbook/playbook_install_1c.yml
+++ b/playbook/playbook_install_1c.yml
@@ -9,6 +9,8 @@
         environment:
           ONEC_USERNAME: "{{ login_1c }}" 
           ONEC_PASSWORD: "{{ password_1c }}"
+
+    - name: shell
       shell: echo $ONEC_USERNAME
 
     # - name: Export variable to the system
