--- a/playbook/playbook_install_1c.yml
+++ b/playbook/playbook_install_1c.yml
@@ -41,5 +41,8 @@
         dest: /usr/local/bin
         remote_src: yes
 
-    -  name: Download 1C release {{ v_release }}
-       shell: oneget get --path /mnt/repo/ platform:linux.full.x64@{{ v_release }}
+    - name: Download 1C release {{ v_release }}
+      environment:
+        ONEC_USERNAME: "{{ login_1c }}" 
+        ONEC_PASSWORD: "{{ password_1c }}"
+      shell: oneget get --path /mnt/repo/ platform:linux.full.x64@{{ v_release }}
