--- a/playbook/playbook_install_1c.yml
+++ b/playbook/playbook_install_1c.yml
@@ -12,7 +12,7 @@
 
     - name: Print file status
       debug:
-        var: setup_var.setup_var.ansible_env
+        var: setup_var.setup_var
 
     - name: Check if file exists using stat module
       stat:
