--- a/playbook/playbook_install_1c.yml
+++ b/playbook/playbook_install_1c.yml
@@ -13,7 +13,7 @@
 
     - name: Print file status
       debug:
-        var: {{ ansible_facts }}
+        msg: {{ ansible_facts }}
 
     - name: Get the current user
       debug:
