--- a/playbook/playbook_install_1c.yml
+++ b/playbook/playbook_install_1c.yml
@@ -13,11 +13,11 @@
 
     - name: Print file status
       debug:
-        msg: {{ ansible_facts }}
+        var: setup_var
 
     - name: Get the current user
       debug:
-        msg: "The current user is {{ ansible_facts['user_id'] }}"
+        msg: "The current user is {{ ansible_facts }}"
 
     - name: Check if file exists using stat module
       stat:
