--- a/playbook/playbook_install_1c.yml
+++ b/playbook/playbook_install_1c.yml
@@ -5,19 +5,19 @@
 
   tasks:
 
-    - name: Setup
-      # become: false
-      setup:
-        filter: ansible_env
-      register: setup_var
+    # - name: Setup
+    #   # become: false
+    #   setup:
+    #     filter: ansible_env
+    #   register: setup_var
 
-    - name: Print file status
-      debug:
-        var: setup_var
+    # - name: Print file status
+    #   debug:
+    #     var: setup_var
 
     - name: Get the current user
       debug:
-        msg: "The current user is {{ ansible_facts }}"
+        msg: "The current user is {{ ansible_facts['SUDO_USER'] }}"
 
     - name: Check if file exists using stat module
       stat:
