--- a/playbook/playbook_install_1c.yml
+++ b/playbook/playbook_install_1c.yml
@@ -4,17 +4,11 @@
   become: true
 
   tasks:
-
-    # - name: Setup
-    #   # become: false
-    #   setup:
+    - name: Setup
+      # become: false
+      setup:
     #     filter: ansible_env
     #   register: setup_var
-
-    # - name: Print file status
-    #   debug:
-    #     var: setup_var
-
     - name: Get the current user
       debug:
         msg: "The current user is {{ ansible_facts['SUDO_USER'] }}"
@@ -46,3 +40,11 @@
         ONEC_USERNAME: "{{ login_1c }}" 
         ONEC_PASSWORD: "{{ password_1c }}"
       shell: oneget get --path /mnt/repo/ platform:linux.full.x64@{{ v_release }}
+
+    - name: Copy file
+      ansible.builtin.copy:
+        src: /srv/myfiles/foo.conf
+        dest: /etc/foo.conf
+        owner: foo
+        group: foo
+        mode: '0644
