--- a/playbook/playbook_install_1c.yml
+++ b/playbook/playbook_install_1c.yml
@@ -11,7 +11,7 @@
     #   register: setup_var
     - name: Get the current user
       debug:
-        msg: "The current user is {{ ansible_facts['env'] }}"
+        msg: "The current user is {{ ansible_facts['env']['SUDO_USER'] }}"
 
     - name: Check if file exists using stat module
       stat:
