--- a/playbook/playbook_install_1c.yml
+++ b/playbook/playbook_install_1c.yml
@@ -41,10 +41,22 @@
         ONEC_PASSWORD: "{{ password_1c }}"
       shell: oneget get --path /mnt/repo/ platform:linux.full.x64@{{ v_release }}
 
-    - name: Copy file
-      ansible.builtin.copy:
-        src: /srv/myfiles/foo.conf
-        dest: /etc/foo.conf
-        owner: foo
-        group: foo
-        mode: '0644'
+
+    - name: Find a file by name
+      find:
+        paths: /mnt/repo/platform83/{{ v_release }}  # Укажите путь, где искать
+        patterns: "server64_8_3_*"  # Имя файла (можно использовать маски, например, "*.log")
+        recurse: yes  # Рекурсивный поиск
+      register: found_files
+
+    - name: Print found files
+      debug:
+        msg: "{{ found_files.files }}"
+
+    # - name: Copy file
+    #   ansible.builtin.copy:
+    #     src: /srv/myfiles/foo.conf
+    #     dest: /etc/foo.conf
+    #     owner: foo
+    #     group: foo
+    #     mode: '0644'
