--- a/playbook/playbook_install_1c.yml
+++ b/playbook/playbook_install_1c.yml
@@ -51,7 +51,7 @@
 
     - name: Print found files
       debug:
-        msg: {{ found_files.files["path"] }}
+        msg: "{{ found_files}}"
 
     # - name: Copy file
     #   ansible.builtin.copy:
