--- a/playbook/playbook_install_1c.yml
+++ b/playbook/playbook_install_1c.yml
@@ -51,12 +51,14 @@
 
     - name: Print found files
       debug:
-        msg: "{{ found_files}}"
+        msg: "{{ found_files }}"
 
-    # - name: Copy file
-    #   ansible.builtin.copy:
-    #     src: /srv/myfiles/foo.conf
-    #     dest: /etc/foo.conf
-    #     owner: foo
-    #     group: foo
-    #     mode: '0644'
+    - name: Copy file
+      ansible.builtin.copy:
+        src: '{{ item.path }}'
+        dest: /home/{{ ansible_facts['env']['SUDO_USER'] }}/
+        owner: "{{ ansible_facts['env']['SUDO_USER'] }}"
+        group: "{{ ansible_facts['env']['SUDO_USER'] }}"
+        mode: '0777'
+      with_items:
+        - '{{ found_files.files }}'
