--- a/playbook/playbook_install_1c.yml
+++ b/playbook/playbook_install_1c.yml
@@ -57,8 +57,8 @@
       ansible.builtin.copy:
         src: '{{ item.path }}'
         dest: /home/{{ ansible_facts['env']['SUDO_USER'] }}/
-        owner: '{{ ansible_facts['env']['SUDO_USER'] }}'
-        group: '{{ ansible_facts['env']['SUDO_USER'] }}'
+        owner: {{ ansible_facts['env']['SUDO_USER'] }}
+        group: {{ ansible_facts['env']['SUDO_USER'] }}
         mode: '0777'
       with_items:
         - '{{ found_files.files }}'
