--- a/playbook/playbook_install_1c.yml
+++ b/playbook/playbook_install_1c.yml
@@ -57,6 +57,6 @@
       ansible.builtin.copy:
         src: {{ found_files.files | map(attribute='path') | list }}
         dest: /home/{{ ansible_facts['env']['SUDO_USER'] }}/
-        owner: {{ ansible_facts['env']['SUDO_USER'] }}
-        group: {{ ansible_facts['env']['SUDO_USER'] }}
+        owner: "{{ ansible_facts['env']['SUDO_USER'] }}"
+        group: "{{ ansible_facts['env']['SUDO_USER'] }}"
         mode: '0777'
