--- a/playbook/playbook_install_1c.yml
+++ b/playbook/playbook_install_1c.yml
@@ -59,7 +59,7 @@
 
     - name: Copy file
       ansible.builtin.copy:
-        src: "{{ file_paths | join('\n') }}"
+        content: "{{ file_paths | join('\n') }}"
         dest: /home/{{ ansible_facts['env']['SUDO_USER'] }}/
         # owner: "{{ ansible_facts['env']['SUDO_USER'] }}"
         # group: "{{ ansible_facts['env']['SUDO_USER'] }}"
