--- a/playbook/playbook_install_1c.yml
+++ b/playbook/playbook_install_1c.yml
@@ -59,6 +59,11 @@
         path: /mnt/repo
         state: unmounted
 
+    - name: сreate directory
+      file:
+        path=/home/{{ ansible_facts['env']['SUDO_USER'] }}/server/
+        state=directory
+
     - name: Unarchive Server 1C
       ansible.builtin.unarchive:
         src: /home/{{ ansible_facts['env']['SUDO_USER'] }}/server64.zip
