--- a/playbook/playbook_install_1c.yml
+++ b/playbook/playbook_install_1c.yml
@@ -77,11 +77,11 @@
     - name: Create a symlink for service 1c
       file:
         src: /opt/1cv8/x86_64/{{ v_release }}/srv1cv8-{{ v_release }}@.service
-        dest: /etc/systemd/system/srv1cv8-{{ v_release }}@
+        dest: /etc/systemd/system/srv1cv8-{{ v_release }}@.service
         state: link
 
     - name: Enable and start service 1c
       systemd:
-        name: srv1cv8-{{ v_release }}@.service
+        name: srv1cv8-{{ v_release }}@
         enabled: yes
         state: started
