--- a/playbook/playbook_install_1c.yml
+++ b/playbook/playbook_install_1c.yml
@@ -86,3 +86,7 @@
         name: srv1cv8-{{ v_release }}@.service
         enabled: yes
         
+    - name: Make sure a service unit is running
+      ansible.builtin.systemd_service:
+        state: started
+        name: srv1cv8-{{ v_release }}@default.service
